include/petsclog.h

PETSC_EXTERN PetscErrorCode PetscGetFlops(PetscLogDouble *);
/* Stage functions */
PETSC_EXTERN PetscErrorCode PetscLogStageRegister(const char[], PetscLogStage *);
PETSC_EXTERN PetscErrorCode PetscLogStagePush(PetscLogStage);
PETSC_EXTERN PetscErrorCode PetscLogStagePop(void);
PETSC_EXTERN PetscErrorCode PetscLogStageSetActive(PetscLogStage, PetscBool);
PETSC_EXTERN PetscErrorCode PetscLogStageGetActive(PetscLogStage, PetscBool *);
PETSC_EXTERN PetscErrorCode PetscLogStageSetVisible(PetscLogStage, PetscBool);
PETSC_EXTERN PetscErrorCode PetscLogStageGetVisible(PetscLogStage, PetscBool *);
PETSC_EXTERN PetscErrorCode PetscLogStageGetId(const char[], PetscLogStage *);
/* Event functions */
PETSC_EXTERN PetscErrorCode PetscLogEventRegister(const char[], PetscClassId, PetscLogEvent *);
PETSC_EXTERN PetscErrorCode PetscLogEventActivate(PetscLogEvent);
PETSC_EXTERN PetscErrorCode PetscLogEventDeactivate(PetscLogEvent);
PETSC_EXTERN PetscErrorCode PetscLogEventSetActiveAll(PetscLogEvent, PetscBool);
PETSC_EXTERN PetscErrorCode PetscLogEventActivateClass(PetscClassId);
PETSC_EXTERN PetscErrorCode PetscLogEventDeactivateClass(PetscClassId);
  /*MC
    PetscLogEventBegin - Log the start of an instance of a `PetscLogEvent`

    Synopsis:
    #include <petsclog.h>
    PetscErrorCode PetscLogEventBegin(PetscLogEvent e, PetscObject o1, PetscObject o2, PetscObject o3, PetscObject o4)

    Not Collective; No Fortran Support

    Input Parameters:
  + e  - the `PetscLogEvent`
  . o1 - first object involved in the event (may be `NULL`)
  . o2 - second object involved in the event (may be `NULL`)
  . o3 - third object involved in the event (may be `NULL`)
  - o4 - fourth object involved in the event (may be `NULL`)

    Level: intermediate

    Note:
    Forwards the call to every active `PetscLogHandler` that implements an `eventBegin` method. Use
    `PetscLogEventEnd()` to log the end of the same event.

.seealso: `PetscLogEvent`, `PetscLogEventRegister()`, `PetscLogEventEnd()`, `PetscLogEventSync()`
M*/
  #define PetscLogEventBegin(e, o1, o2, o3, o4) PetscLogEventBegin_Internal(e, (PetscObject)(o1), (PetscObject)(o2), (PetscObject)(o3), (PetscObject)(o4))
  /*MC
    PetscLogEventEnd - Log the end of an instance of a `PetscLogEvent`

    Synopsis:
    #include <petsclog.h>
    PetscErrorCode PetscLogEventEnd(PetscLogEvent e, PetscObject o1, PetscObject o2, PetscObject o3, PetscObject o4)

    Not Collective; No Fortran Support

    Input Parameters:
  + e  - the `PetscLogEvent`
  . o1 - first object involved in the event (may be `NULL`)
  . o2 - second object involved in the event (may be `NULL`)
  . o3 - third object involved in the event (may be `NULL`)
  - o4 - fourth object involved in the event (may be `NULL`)

    Level: intermediate

    Note:
    Must be paired with a prior `PetscLogEventBegin()` for the same event.

.seealso: `PetscLogEvent`, `PetscLogEventRegister()`, `PetscLogEventBegin()`, `PetscLogEventSync()`
M*/
  #define PetscLogEventEnd(e, o1, o2, o3, o4) PetscLogEventEnd_Internal(e, (PetscObject)(o1), (PetscObject)(o2), (PetscObject)(o3), (PetscObject)(o4))
/*@
  PetscLogFlops - Log how many flops are performed in a calculation

  Not Collective

  Input Parameter:
. n - the number of flops

  Level: intermediate

  Note:
  To limit the chance of integer overflow when multiplying by a constant, represent the constant as a double,
  not an integer. Use `PetscLogFlops`(4.0*n) not `PetscLogFlops`(4*n)

.seealso: [](ch_profiling), `PetscLogView()`, `PetscLogGpuFlops()`
@*/
static inline PetscErrorCode PetscLogFlops(PetscLogDouble n)
{
  PetscAssert(n >= 0, PETSC_COMM_SELF, PETSC_ERR_ARG_OUTOFRANGE, "Cannot log negative flops");
  return PetscAddLogDouble(&petsc_TotalFlops, &petsc_TotalFlops_th, PETSC_FLOPS_PER_OP * n);
}
  #define PetscLogFlops(n) ((void)(n), PETSC_SUCCESS)
  #define PetscGetFlops(a) (*(a) = 0.0, PETSC_SUCCESS)
  #define PetscLogStageRegister(a, b)    ((void)(a), *(b) = -1, PETSC_SUCCESS)
  #define PetscLogStagePush(a)           ((void)(a), PETSC_SUCCESS)
  #define PetscLogStagePop()             PETSC_SUCCESS
  #define PetscLogStageSetActive(a, b)   ((void)(a), (void)(b), PETSC_SUCCESS)
  #define PetscLogStageGetActive(a, b)   ((void)(a), *(b) = PETSC_FALSE, PETSC_SUCCESS)
  #define PetscLogStageGetVisible(a, b)  ((void)(a), *(b) = PETSC_FALSE, PETSC_SUCCESS)
  #define PetscLogStageSetVisible(a, b)  ((void)(a), (void)(b), PETSC_SUCCESS)
  #define PetscLogStageGetId(a, b)       ((void)(a), *(b) = -1, PETSC_SUCCESS)
  #define PetscLogEventRegister(a, b, c)    ((void)(a), (void)(b), *(c) = -1, PETSC_SUCCESS)
  #define PetscLogEventActivate(a)          ((void)(a), PETSC_SUCCESS)
  #define PetscLogEventDeactivate(a)        ((void)(a), PETSC_SUCCESS)
  #define PetscLogEventActivateClass(a)     ((void)(a), PETSC_SUCCESS)
  #define PetscLogEventDeactivateClass(a)   ((void)(a), PETSC_SUCCESS)
  #define PetscLogEventSetActiveAll(a, b)   ((void)(a), PETSC_SUCCESS)
  #define PetscLogEventBegin(e, o1, o2, o3, o4)                 ((void)(e), (void)(o1), (void)(o2), (void)(o3), PETSC_SUCCESS)
  #define PetscLogEventEnd(e, o1, o2, o3, o4)                   ((void)(e), (void)(o1), (void)(o2), (void)(o3), PETSC_SUCCESS)